--- a/algilananKisiler/menu.html
+++ b/algilananKisiler/menu.html
@@ -43,8 +43,8 @@
     <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
       <div class="bg-white py-2 collapse-inner rounded">
         <h6 class="collapse-header">I-beacon İşlemleri</h6>
-        <a class="collapse-item" href="ibeaconEkle.php">I-Beacon Ekle</a>
-        <a class="collapse-item" href="ibeaconListele.php">I-Beacon Lİstele</a>
+        <a class="collapse-item" href="../ibeacon/ibeaconEkle.php">I-Beacon Ekle</a>
+        <a class="collapse-item" href="../ibeacon/ibeaconListele.php">I-Beacon Lİstele</a>
       </div>
     </div>
   </li>
